--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start":
+    "set HTTPS=true&&set certificate =.Certificates/localhost.pem&&set key =.Certificates/localhost-key.pem&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
